# ble_chat_server

./: .gitignore  app.c  app.h  app_cli.c  app_freertos.c  ble_chat_server.pintool  ble_chat_server.slcp  ble_chat_server.slps  colors.h
cmake_gcc/: CMakeLists.txt
config/: FreeRTOSConfig.h  pin_config.h  sl_cli_config.h  sl_cli_config_inst.h  sl_clock_manager_oscillator_config.h  sl_iostream_eusart_vcom_config.h  sl_memory_manager_region_config.h  sl_rail_util_pti_config.h
config/btconf/: slc_args.json
